# exofork

./: Cargo.toml  in.exo
src/: lib.rs  main.rs  parser.lalrpop
src/codegen/: llvm.rs
src/frontend/: ast.rs  parser.rs
src/ir/: mod.rs
