[package]
name = "exofork"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version="4.3.0", features=["derive"] }
inkwell = { version="0.2.0", features=["llvm16-0"] }
lalrpop-util = { version = "0.19.6", features=["lexer"] }

[build-dependencies]
lalrpop = { version = "0.19.6", features=["lexer"] }
